k8s/base/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: dachshaus-public
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
